--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
+    "date-fns": "^4.1.0",
+    "feed": "^4.2.2",
+    "marked": "^15.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.3"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.29.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "styled-components": "^6.1.15"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
